IGNITE-23221 Add startup parameters temporarily